--- a/Package.json
+++ b/Package.json
@@ -14,9 +14,9 @@
     "email": "ninhnv15@gmail.com"
   },
   "gitDependencies": {
-     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
+    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
     "com.neuecc.unirx": "https://github.com/neuecc/UniRx.git?path=Assets/Plugins/UniRx/Scripts",
-    "com.coffee.ui-effect": "https://github.com/mob-sakai/UIEffect.git",
+    "com.coffee.ui-effect": "https://github.com/mob-sakai/UIEffect.git"
   },
   "dependencies": {
     "com.unity.addressables": "1.19.19",
