--- a/Plugins/GameFoundation.Extendsions.asmdef
+++ b/Plugins/GameFoundation.Extendsions.asmdef
@@ -20,6 +20,12 @@
     ],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "Unity",
+            "expression": "",
+            "define": "BESTHTTP_SIGNALR_CORE_ENABLE_GAMEDEVWARE_MESSAGEPACK"
+        }
+    ],
     "noEngineReferences": false
 }
